Revision history for Crypt-Passphrase

{{$NEXT}}
          - Better encode salts in System encoder

0.015     2023-04-04 15:54:56+02:00 Europe/Amsterdam
          - Fix compilation issue on perls < 5.22.0

0.014     2023-04-03 16:43:30+02:00 Europe/Amsterdam
          - Add Crypt::Passphrase::Pepper::Simple
          - Bump minimum perl to 5.14

0.013     2023-03-29 14:53:58+02:00 Europe/Amsterdam
          - Add SHA::Base64 and MD5::Base64 validators

0.012     2023-03-22 12:32:01+01:00 Europe/Amsterdam
          - Allow descrypt to not need rehash

0.011     2023-03-21 14:30:32+01:00 Europe/Amsterdam
          - Add Crypt::Passphrase::System

0.010     2023-03-14 23:04:53+01:00 Europe/Amsterdam
          - Add @CARP_NOT handler to import
          - More gracefully handle undefined passwords
          - Depreciate curry_with_password

0.009     2023-03-09 01:04:14+01:00 Europe/Amsterdam
          - Be more permissive in allowed crypt identifiers

0.008     2023-03-07 23:51:24+01:00 Europe/Amsterdam
          - Always instantiate validators
          - Add secure_compare method to Validator

0.007     2023-02-12 17:20:19+01:00 Europe/Amsterdam
          - Add curry_with_hash and curry_with_password methods
          - Add a unicode normalization option
          - Match MD5 and SHA hex case-insensitively

0.006     2023-02-08 01:36:27+01:00 Europe/Amsterdam
          - Add Crypt::Passphrase::MD5::Hex
          - Add Crypt::Passphrase::SHA1::Hex
          - Add Crypt::Passphrase::PassphraseHash

0.005     2022-12-26 17:56:04+01:00 Europe/Amsterdam
          - Cache accepted hashes for crypt validators
          - Never accept undefined hashes

0.004     2021-12-29 02:25:52+01:00 Europe/Amsterdam
          - Use Crypt::URandom for randomness

0.003     2021-03-11 20:50:59+01:00 Europe/Amsterdam
          - Fix password encoding to utf8

0.002     2021-03-11 19:54:06+01:00 Europe/Amsterdam
          - Normalize passwords before hashing them
