@@ -1,6 +1,7 @@
 Revision history for Crypt-Passphrase
 
 {{$NEXT}}
+          - Make pepper algorithm part of crypt identifiers
           - Better encode salts in System encoder
 
 0.015     2023-04-04 15:54:56+02:00 Europe/Amsterdam
